objects/GenAIContentQuality__dlm.object
<CustomObject>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>Key Qualifier Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>Key Qualifier Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contentType__c</fullName>
        <label>Content Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>Feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isToxicityDetected__c</fullName>
        <label>Is Toxicity Detected</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>Org Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_1753303619805_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIContentQuality_parent_map_GenAI_rel</label>
        <referenceTo>GenAIGatewayRequest__dlm</referenceTo>
        <relationshipLabel>GenAIContentQuality_parent_map_GenAI_rel</relationshipLabel>
        <relationshipName>rel_1753303619805_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rel_1753303740419_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIContentQuality_parent_map_GenAI_rel</label>
        <referenceTo>GenAIGeneration__dlm</referenceTo>
        <relationshipLabel>GenAIContentQuality_parent_map_GenAI_rel</relationshipLabel>
        <relationshipName>rel_1753303740419_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>